--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">GroxeryUp</string>
+    <string name="app_name">Grocery Demo\n\n\nSubmitted to Vijay Beney Krupal</string>
 </resources>
