--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Grocery Demo\n\n\nSubmitted to Vijay Beney Krupal</string>
+    <string name="client_id">573469872654-f7921qh1vk106igtcve4atttfqvlvv64.apps.googleusercontent.com</string>
+
 </resources>
